--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "Fully Responsive Developer Portfolio using HTML, CSS , JS and Bootstrap",
   "main": "index.js",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
+    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
