--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
         {
             "src": "app.js",
             "use": "@vercel/node"
-        },
-        {
-            "src": "./static/*",
-            "use": "@vercel/static"
         }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "/app.js"
