--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Fully Responsive Developer Portfolio using HTML, CSS , JS and Bootstrap",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start":"node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
