--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,11 @@
             "use": "@vercel/node"
         },
         {
-            "src": "static",
+            "src": "./static/*",
             "use": "@vercel/static"
         }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
         {
             "src": "/(.*)",
             "dest": "/app.js"
